[project]
name = "chrometrace"
version = "0.1.2"
description = "A Python library for Chrome Trace Viewer files"
authors = [{ name = "Jonas Ehrlich", email = "jonas.ehrlich@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "trace",
    "chromium",
]

[project.urls]
Homepage = "https://github.com/jonasehrlich/chrometrace"
Repository = "https://github.com/jonasehrlich/chrometrace"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-sugar>=1.0.0",
    "ruff>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
