[project]
name = "chrometrace"
version = "0.1.2"
description = "A Python library for Chrome Trace Viewer files"
authors = [{ name = "Jonas Ehrlich", email = "jonas.ehrlich@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "trace",
    "chromium",
]

[project.urls]
Homepage = "https://github.com/jonasehrlich/chrometrace"
Repository = "https://github.com/jonasehrlich/chrometrace"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.coverage.report]
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    "^\\s+\\.\\.\\.",
    # Don't complain about type check guarded imports
    "if ((ty)(ping)?.)?TYPE_CHECKING:",
]
fail_under = 82

[tool.coverage.run]
branch = true
source = ["chrometrace"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 120
